--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="m a full stack, Dynamic and detail-oriented Web Developer with 3+ years of experience. I have a knack for conceptualizing and delivering elegant, user-friendly solutions effectively and efficiently. I've Worked on various projects to decrease costs and achieve client satisfaction." />
     <meta name="keywords" content="software developer| Fullstack developer| web developer| senior developer| freelancer | LAMP stack| MEAN stack |porfolio website" />
     <meta name="author" content="peterson oaikhenah" />
-    
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
     
@@ -141,11 +141,13 @@
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
                 <p><a href="#" class="scroll">I'm from Nigeria</a></p>
-                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}" style="color: #79efb4 ! important;">A Web Designer and Developer</h1>
+                <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}" style="color: #79efb4 ! important;">A Web Developer</h1>
               </div>
             </div>
           </div>
         </div>
+
+
       </section>
       <!-- END slider -->
    <section class="ftco-section about-section">
