--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <div class="container">
             <div class="row slider-text align-items-center text-center justify-content-center" data-scrollax-parent="true">
               <div class="col-md-12 ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
-                <p><a href="#" class="scroll">I'm from Lagos,Nigeria</a></p>
+                <p><a href="#" class="scroll">I'm from Nigeria</a></p>
                 <h1 class="mb-3" data-scrollax="properties: {translateY: '30%', opacity: 1.6}" style="color: #79efb4 ! important;">A Web Developer</h1>
               </div>
             </div>
