page fixed refresh issue

--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
 
       const aboutRedirect = (about)=> {
           let link = document.location = "index.html#" + about;
-         window.location.href = link;
+          window.open(link);
        }
         const servicesRedirect = (services)=> {
           let link = document.location = "index.html#" + services;
